[package]
name = "ftml-backend-ts"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--all-features"]

[features]

[dependencies]
wasm-bindgen = {workspace = true}
tsify = {workspace = true}
serde = {workspace = true}
ftml-backend = {workspace = true}
flams-backend-types = {workspace = true}
ftml-uris = {workspace = true}
ftml-dom = {workspace = true}
ftml-ontology = {workspace = true}